Update Dockerfile - libpkcs11-helper1

--- a/app/docker/Dockerfile
+++ b/app/docker/Dockerfile
@@ -9,3 +9,4 @@ RUN apt-get install -y kmod make gcc wget
 RUN apt-get install -y rpm2cpio cpio
 RUN apt-get install -y fuse
 RUN apt-get install -y file
+RUN apt-get install -y libpkcs11-helper1
