--- a/app/Makefile
+++ b/app/Makefile
@@ -18,7 +18,7 @@ all: clean init
 	#wget --output-document=$(PWD)/build/build.deb https://code-industry.net/public/master-pdf-editor-5.8.70-qt5_included.x86_64.deb
 	#wget --output-document=$(PWD)/build/build.deb https://code-industry.net/public/master-pdf-editor-$(VERSION)-qt5_included.x86_64.deb
 	#wget --output-document=$(PWD)/build/build.deb https://code-industry.net/public/master-pdf-editor-5.9.61-qt5.9.x86_64.deb
-	wget --output-document=$(PWD)/build/build.deb https://code-industry.net/public/master-pdf-editor-$(VERSION)-qt5.9.x86_64.deb
+	wget --output-document=$(PWD)/build/build.deb https://code-industry.net/public/master-pdf-editor-$(VERSION)_qt5.amd64.deb
 
 	dpkg -x $(PWD)/build/build.deb $(PWD)/build
 
